--- a/src/index.css
+++ b/src/index.css
@@ -1,45 +1,76 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
+
+
+
+html {
+  scroll-behavior: smooth;
+}
 
 @font-face {
-  font-family: 'Cairo';
-  src: url('./assets/Font/Cairo-Black.ttf') format('truetype');
+  font-family: "Cairo";
+  src: url("./assets/Font/Cairo-Black.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Cairo';
-  src: url('./assets/Font/Cairo-Bold.ttf') format('truetype');
+  font-family: "Cairo";
+  src: url("./assets/Font/Cairo-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Cairo';
-  src: url('./assets/Font/Cairo-ExtraLight.ttf') format('truetype');
+  font-family: "Cairo";
+  src: url("./assets/Font/Cairo-ExtraLight.ttf") format("truetype");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Cairo';
-  src: url('./assets/Font/Cairo-Light.ttf') format('truetype');
+  font-family: "Cairo";
+  src: url("./assets/Font/Cairo-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Cairo';
-  src: url('./assets/Font/Cairo-Regular.ttf') format('truetype');
+  font-family: "Cairo";
+  src: url("./assets/Font/Cairo-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Cairo';
-  src: url('./assets/Font/Cairo-SemiBold.ttf') format('truetype');
+  font-family: "Cairo";
+  src: url("./assets/Font/Cairo-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+
+
+
+.swiper-slide-shadow-left,
+.swiper-slide-shadow-right {
+  display: none;
+}
+
+.slider-controler .slider-arrow::after {
+  display: none;
+}
+
+.swiper-button-disabled img {
+  opacity: 1;
+  filter: grayscale(100%);
 }
